# robusta

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODING-CONVENTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_and_test.sh  build_on_apple_m1.sh  build_release.sh  build_with_arm.sh  cli.Dockerfile  docker-bake.hcl  docs.Dockerfile  docs_autobuild.sh  list_pods_perf_tests.py  mirrord.json  playbook-gen.Dockerfile  pyproject.toml  robusta-grafana-cloud-docs.md  run_runner_locally.sh  setup.cfg  skaffold.yaml  streamlit.Dockerfile  test.yaml  test_slack_integration.py
playbooks/: aa_base_params.py  active_playbooks.yaml  alerts_integration.py  argo_cd.py  autoscaler.py  babysitter.py  base_params.py  bash_enrichments.py  chaos_engineering.py  configuration_ab_testing.py  cpu_alerts.py  cpu_throttling.py  daemonsets.py  deployment_babysitter.py  deployment_enrichments.py  deployment_status_report.py  disk_benchmark.py  event_enrichments.py  event_publisher.py  git_change_audit.py  grafana_enrichment.py  image_pull_backoff_enricher.py  log_examples.py  networking.py  node_cpu_analysis.py  node_enrichments.py  oom_killer.py  persistent_data.py  pod_enrichments.py  pod_troubleshooting.py  pyproject.toml  requirements.txt  restart_loop_reporter.py  simple_examples.py  stress_tests.py
playbooks/robusta_playbooks/: alerts_integration.py  api_service.py  argo_cd.py  autoscaler.py  aws_node_group_actions.py  babysitter.py  bash_enrichments.py  chaos_engineering.py  common_actions.py  configuration_ab_testing.py  cpu_throttling.py  daemonsets.py  demo_actions_1.py  demo_actions_2.py  deployment_enrichments.py  deployment_restart.py  deployment_status_report.py  disk_benchmark.py  disk_pressure_enricher.py  dmesg_enricher.py  dns_alerts.py  event_enrichments.py  event_publisher.py  events_enrichments.py  get_resource_enrichment.py  git_change_audit.py  grafana_enrichment.py  helm_release_events.py  http_actions.py  http_check.py  image_pull_backoff_enricher.py  java_pod_troubleshooting.py  job_actions.py  job_restart_on_oomkilled.py  job_restart_on_oomkilled_community.py  k8s_resource_enrichments.py  krr.py  kubectl_enrichments.py  networking.py  node_actions.py  (+31 more)
playbooks/robusta_playbooks/experimental/: java_pod_troubleshooting.py
src/: Dockerfile  logs.txt  pyproject.toml
src/robusta/: _version.py
src/robusta/api/: __init__.py
src/robusta/cli/: auth.py  backend_profile.py  eula.py  integrations_cmd.py  main.py  playbooks_cmd.py  self_host.py  slack_feedback_message.py  slack_verification.py  utils.py
src/robusta/clients/: robusta_client.py
src/robusta/core/: active_playbooks.py  exceptions.py  triggers.py
src/robusta/core/consts/: consts.py
src/robusta/core/discovery/: discovery.py  resource_names.py  top_service_resolver.py  utils.py
src/robusta/core/model/: base_params.py  cloud_event.py  cluster_nodes.py  cluster_status.py  data_types.py  deployment_context.py  env_vars.py  events.py  helm_release.py  jobs.py  k8s_operation_type.py  namespaces.py  nodes.py  openshift_group.py  playbook_deploy_config.py  playbook_hash.py  pods.py  prometheus.py  runner_config.py  services.py  sinks.py  trigger_params.py
src/robusta/core/persistency/: in_memory.py  scheduled_jobs_states_dal.py
src/robusta/core/playbooks/: actions_registry.py  base_trigger.py  common.py  container_playbook_utils.py  crash_reporter.py  generation.py  job_utils.py  node_enrichment_utils.py  node_playbook_utils.py  oom_killer_utils.py  outgoing_action_request.py  playbook_utils.py  playbooks_event_handler.py  playbooks_event_handler_impl.py  pod_utils.py  prometheus_cli.py  prometheus_enrichment_utils.py  silence_utils.py  trigger.py  validators.py
src/robusta/core/pubsub/: event_emitter.py  event_subscriber.py  events_pubsub.py
src/robusta/core/reporting/: __init__.py  action_requests.py  base.py  blocks.py  callbacks.py  consts.py  custom_rendering.py  finding_subjects.py  findings.py  holmes.py  url_helpers.py  utils.py
src/robusta/core/schedule/: model.py  scheduler.py
src/robusta/core/sinks/: __init__.py  sink_base.py  sink_base_params.py  sink_config.py  sink_factory.py  sink_manager.py  sinks_registry.py  timing.py  transformer.py
src/robusta/core/stream/: utils.py
src/robusta/core/triggers/: container_oom_killed_trigger.py  custom_triggers.py  error_event_trigger.py  helm_releases_triggers.py  job_failed_trigger.py  multi_resources_trigger.py  oom_killed_trigger_base.py  pod_crash_loop_trigger.py  pod_evicted_trigger.py  pod_image_pull_backoff.py  pod_oom_killed_trigger.py
src/robusta/integrations/: action_requests.py  base_handler.py  grafana.py  helper.py  receiver.py
src/robusta/integrations/argocd/: argocd_client.py
src/robusta/integrations/common/: requests.py
src/robusta/integrations/discord/: sender.py
src/robusta/integrations/git/: git_repo.py  git_repo_manager.py  well_known_hosts.py
src/robusta/integrations/google_chat/: sender.py
src/robusta/integrations/helm/: models.py  trigger.py
src/robusta/integrations/jira/: client.py  constants.py  sender.py
src/robusta/integrations/kubernetes/: base_event.py  (+7 more)
src/robusta/model/: alert_relabel_config.py  config.py  global_config.py  playbook_action.py  playbook_definition.py  registry.py  registry_handler.py
src/robusta/patch/: patch.py
src/robusta/runner/: config_handler.py  config_loader.py  log_init.py  main.py  not_found_exception.py  object_updater.py  process_setup.py  runner_telemetry.py  ssl_utils.py  telemetry.py  telemetry_service.py  web.py  web_api.py
src/robusta/utils/: auth_provider.py  base64_utils.py  cluster_discovery.py  cluster_provider_discovery.py  common.py  decorators.py  directory_watcher.py  docs.py  documented_pydantic.py  error_codes.py  file_system_watcher.py  function_hashes.py  json_schema.py  node_discovery.py  optional_params.py  parsing.py  pod_discovery.py  rate_limiter.py  scope.py  server_start.py  service_discovery.py  silence_utils.py  stack_tracer.py  task_queue.py  time_utils.py  trim_markdown.py
(+1158 files in other folders)
