[tool.poetry]
name = "robusta-cli"
version = "0.0.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
packages = [
    { include = "robusta", from = "src"},
]

[tool.poetry.scripts]
robusta = "robusta.cli.main:app"

[tool.poetry.dependencies]
python = "^3.7.1"
typer = "^0.3.2"
colorlog = "^5.0.1"
pydantic = "^1.8.1"
kubernetes = "^12.0.1"
hikaru = "^0.5.1-beta.0"
click-spinner = "^0.1.10"
pymsteams = "^0.1.16"
supabase-py = { version = "^0.0.2", optional = true}
tabulate = { version = "^0.8.9" }
slack-sdk = { version = "^3.7.0" }
Flask = { version = "^1.1.2", optional = true }
grafana-api = { version = "^1.0.3", optional = true }
manhole =  { version = "^1.8.0", optional = true }
watchdog =  { version = "^2.1.0", optional = true }
better-exceptions = { version =  "^0.3.3", optional = true }
CairoSVG = { version = "^2.5.2", optional = true }
kafka-python = { version = "^2.0.2", optional = true }
prometheus-api-client = { version = "^0.4.2", optional = true }
datadog-api-client = { version = "^1.2.0", optional = true }
dpath = "^2.0.5"
prometheus-client = "^0.12.0"
pyyaml = "^6.0"
pytz = "^2021.3"
docutils="^0.17.0"
sentry-sdk = { version = "^1.5.2", optional = true }
opsgenie-sdk = "^2.1.5"
markdown2 = "^2.4.2"
toml = "^0.10.2"
watchgod = "^0.7"

# we're freezing a specific version here because the latest version doesn't have prebuilt wheels on pypi
# and therefore requires gcc to install which we'd like to avoid
# this is similar to the issue at https://github.com/dulwich/dulwich/issues/839
dulwich =  { version = "0.20.28", optional = true }
cryptography = "^36.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"
python-dotenv = "^0.18.0"
Sphinx = "^4.3.2"
furo = "^2021.11.12"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
sphinx-design = "^0.0.13"
witchhazel = "^2018.8.23"
sphinx-autodoc-typehints = "^1.12.0"
sphinxcontrib-images = "^0.9.4"
jsonref = "^0.2"
Pillow = "^9.0.0"
sphinxcontrib-mermaid = "^0.7.1"
humanize = "^3.13.1"
cssselect = "^1.1.0"
pygal = "^3.0.0"
tinycss = "^0.4"
rsa = "^4.8"



[tool.poetry.extras]
all = ["Flask", "grafana-api", "manhole", "watchdog", "dulwich", "better-exceptions", "CairoSVG", "tabulate", "kafka-python", "prometheus-api-client", "supabase-py", "datadog-api-client", "pygal", "tinycss", "cssselect", "rsa", "sentry-sdk"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/mtkennerly/poetry-dynamic-versioning
# we can use this in github actions by running `poetry run poetry-dynamic-versioning`
#[tool.poetry-dynamic-versioning]
#vcs = "git"
#pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"
