[tool.poetry]
name = "robusta-cli"
version = "0.0.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
packages = [
    { include = "robusta", from = "src"},
]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
robusta = "robusta.cli.main:app"

[tool.poetry.dependencies]
python = "^3.7.1"
typer = "^0.4.1"
colorlog = "^5.0.1"
pydantic = "^1.8.1"
kubernetes = "^26.1.0"
hikaru = "^1.0.1"
click-spinner = "^0.1.10"
pymsteams = "^0.1.16"
supabase-py = { version = "^0.0.2", optional = true}
tabulate = { version = "^0.8.10" }
slack-sdk = { version = "^3.7.0" }
Flask = { version = "^1.1.2", optional = true }
grafana-api = { version = "^1.0.3", optional = true }
watchdog =  { version = "^2.1.0", optional = true }
better-exceptions = { version =  "^0.3.3", optional = true }
CairoSVG = { version = "^2.5.2", optional = true }
kafka-python = { version = "^2.0.2", optional = true }
prometheus-api-client = { version = "^0.4.2", optional = true }
datadog-api-client = { version = "^1.2.0", optional = true }
dpath = "^2.0.5"
websocket-client = "1.3.3"
prometheus-client = "^0.12.0"
pyyaml = "^6.0"
pytz = "^2021.3"
poetry-core = "1.1.0a7"
docutils="^0.17.0"
sentry-sdk = { version = "^1.5.2", optional = true }
opsgenie-sdk = "^2.1.5"
markdown2 = "^2.4.2"
toml = "^0.10.2"
watchgod = "^0.7"
webexteamssdk = "^1.6.1"
bitmath = "^1.3.3.1"

# we're freezing a specific version here because the latest version doesn't have prebuilt wheels on pypi
# and therefore requires gcc to install which we'd like to avoid
# this is similar to the issue at https://github.com/dulwich/dulwich/issues/839
dulwich =  { version = "0.20.28", optional = true }
cryptography = "^36.0.0"
PyJWT = "2.4.0"
fpdf2 = "^2.7.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"
python-dotenv = "^0.18.0"
Sphinx = "^4.3.2"
#furo = "^2021.11.12"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
sphinx-design = "^0.0.13"
witchhazel = "^2018.8.23"
sphinx-autodoc-typehints = "^1.12.0"
sphinxcontrib-images = "^0.9.4"
jsonref = "^0.2"
Pillow = "^9.0.0"
sphinxcontrib-mermaid = "^0.7.1"
humanize = "^3.13.1"
cssselect = "^1.1.0"
pygal = "^3.0.0"
tinycss = "^0.4"
rsa = "^4.8"
sphinxcontrib-details-directive = "^0.1.0"
sphinx-immaterial = { git = "https://github.com/robusta-dev/robusta-immaterial.git" }
# TODO: Attempt to have different groups (docs, lint, etc) and install them separately
# Flake8 5.0.4 is the last version that supports Python 3.7
# As it does not work witn sphynx-immaterial, we need to exclude it from the dev dependencies
# Please, install it manually if you need to run flake8
# flake8 = "5.0.4"
black = "21.5b2"
mypy = "0.991"
isort = "5.10.1"
absolufy-imports = "^0.3.1"
types-pytz = "^2022.6.0.1"
types-requests = "^2.28.11.5"
types-cachetools = "^5.2.1"
types-PyYAML = "^6.0.0"
types-click-spinner = "^0.1.10"
types-toml = "^0.10.2"
types-tabulate = "^0.8.10"

# There is a bug in jinga2 and markupsafe (explicitly markupsafe 2.1.1)
markupsafe = "2.0.1"

[tool.poetry.extras]
all = ["Flask", "grafana-api", "watchdog", "dulwich", "better-exceptions", "CairoSVG", "tabulate", "kafka-python", "prometheus-api-client", "supabase-py", "datadog-api-client", "pygal", "tinycss", "cssselect", "rsa", "sentry-sdk", "poetry-core"]

[tool.poetry.group.dev.dependencies]
sphinx-jinja = { git = "https://github.com/robusta-dev/sphinx-jinja.git" }
sphinx-reredirects = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/mtkennerly/poetry-dynamic-versioning
# we can use this in github actions by running `poetry run poetry-dynamic-versioning`
#[tool.poetry-dynamic-versioning]
#vcs = "git"
#pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"
