[tool.poetry]
name = "robusta-cli"
version = "0.0.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
packages = [
    { include = "robusta"},
]

[tool.poetry.scripts]
robusta = "robusta.cli.main:app"

[tool.poetry.dependencies]
python = "^3.7.1"
typer = "^0.3.2"
colorlog = "^5.0.1"
pydantic = "^1.8.1"
kubernetes = "^12.0.1"
hikaru = "^0.5.1-beta.0"
click-spinner = "^0.1.10"
Flask = { version = "^1.1.2", optional = true }
grafana-api = { version = "^1.0.3", optional = true }
manhole =  { version = "^1.8.0", optional = true }
watchdog =  { version = "^2.1.0", optional = true }
dulwich =  { version = "^0.20.23", optional = true }
better-exceptions = { version =  "^0.3.3", optional = true }
CairoSVG = { version = "^2.5.2", optional = true }
tabulate = { version = "^0.8.9", optional = true }
kafka-python = { version = "^2.0.2", optional = true }
prometheus-api-client = { version = "^0.4.2", optional = true }
slack-sdk = { version = "^3.7.0", optional = true }
supabase-py = { version = "^0.0.2", optional = true }
datadog-api-client = { version = "^1.2.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"
python-dotenv = "^0.18.0"

[tool.poetry.extras]
all = ["Flask", "grafana-api", "manhole", "watchdog", "dulwich", "better-exceptions", "CairoSVG", "tabulate", "kafka-python", "prometheus-api-client", "slack-sdk", "supabase-py", "datadog-api-client"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/mtkennerly/poetry-dynamic-versioning
# we can use this in github actions by running `poetry run poetry-dynamic-versioning`
#[tool.poetry-dynamic-versioning]
#vcs = "git"
#pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"
